# tencentcloud-sdk-python-ext

./: README.md  pyproject.toml
example/: credentials
tcc_ext/: __init__.py  credential.py  credentials.py
